--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   cached_network_image: ^3.4.1
   camera: ^0.11.2+1
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   flutter_test:
